--- a/proyect/composer.json
+++ b/proyect/composer.json
@@ -27,7 +27,10 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-        "files": ["app/Helpers/Encryptor.php"]
+        "files": [
+            "app/Helpers/Encryptor.php",
+            "app/Helpers/ApiHttp.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
